--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#egg = "0.6.0"
-egg = { path = "../egg" }
+egg = "0.7.1"
+#egg = { path = "../egg" }
